--- a/study-up/config/database.yml
+++ b/study-up/config/database.yml
@@ -22,4 +22,8 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  adapter:  postgresql
+  encoding: unicode
+  database: studyup_test
+  username: studyupggc
+  password: supersecret
